--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#cervejas">Cervejas</a></li>
                     <li><a href="#preco">Preço</a></li>
-                    <li><a href="#qualidade">qualidade</a></li>
+                    <li><a href="#qualidade">Qualidade</a></li>
                 </ul>
             </nav>
         </div>
